Deploying all outstanding changes to get at least 1 day of beta coverage. This includes material covered in code reviews #113 (new front page, refactored search bar), 117 (search algorithm fixes), 118 (search form fixes) and 119 (profile page tweaks).

--- a/branches/prototype/pydjango/media/css/gcd/default.css
+++ b/branches/prototype/pydjango/media/css/gcd/default.css
@@ -157,6 +157,7 @@ h1#search_id {
 }
 
 #search_bar img {
+    display: inline;
     height: 2em;
     position: relative;
     top: 0.5em;
